@@ -12,6 +12,7 @@
 
 ngIRCd-dev
 
+  - Fixed Bug 83: ngIRCd chokes on 1-character messages.
   - Add support for modeless channels ("+channels").
     (Bryan Caldwell, Ali Shemiran)
 
